# arxiv_spotlighter

./: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/: main.py
src/utils/: __init__.py  _slack_notifier.py
src/utils/arxiv/: __init__.py  _arxiv_paper_fetcher.py
src/utils/slack/: __init__.py  _slack_notifier.py
