[project]
name = "arxiv-spotlighter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "haruto2001", email = "tarako5515@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "arxiv>=2.1.0",
    "requests==2.31.0",
    "langchain-openai>=0.1.8",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_spotlighter"]
